Fixed Footer Alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1035,7 +1035,7 @@ footer {
 footer a {
     color: white;
     text-decoration: none;
-    margin: 0 5px;
+    padding: 0;
 }
 
 footer a:hover {
